--- a/myProj/Views/Home/Index.cshtml
+++ b/myProj/Views/Home/Index.cshtml
@@ -3,66 +3,67 @@
 }
 @using System.Web.Helpers;
 
-@model IEnumerable<myProj.Models.ResultType>
+@model IEnumerable<myProj.DTO.Res>
 
-<h2>Фильтрация и cортировка филиалов</h2>
-<input type="text" id="search" placeholder="Поиск по филиалу">
+<h2>Фильтрация и сортировка филиалов</h2>
+<input type="text" id="search" placeholder="Поиск по филиалу" data-bind="value: searchTerm, valueUpdate: 'input'">
 <button id="sortAsc">Сортировать по возрастанию</button>
 <button id="sortDesc">Сортировать по убыванию</button>
 
 <table id="dataTable">
     <thead>
         <tr>
-            <th>филиал</th>
+            <th>Филиал</th>
             <th>Все Филиалы</th>
             <th>Компания Филиала</th>
             <th>Тип</th>
         </tr>
     </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.RequestedBranchName</td>
-                <td>@item.BranchName</td>
-                <td>@item.CompanyName</td>
-                <td>@item.Kind</td>
-            </tr>
-        }
+    <tbody data-bind="foreach: filteredCompaniesBranches">
+        <tr>
+            <td data-bind="text: RequestedBranchName"></td>
+            <td data-bind="text: BranchName"></td>
+            <td data-bind="text: CompanyName"></td>
+            <td data-bind="text: Kind"></td>
+        </tr>
     </tbody>
 </table>
 
 @section Scripts {
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.4.0.js"></script>
     <script>
         $(document).ready(function () {
             var originalData = @Html.Raw(Json.Encode(Model));
+            var viewModel = {
+                companiesBranches: ko.observableArray(originalData),
+                searchTerm: ko.observable(''),
 
-            $('#search').on('input', function () {
-                var searchTerm = $(this).val().toLowerCase();
-                var filteredData = originalData.filter(function (item) {
-                    return item.RequestedBranchName.toLowerCase().includes(searchTerm);
-                });
-                updateTable(filteredData);
-            });
+                filteredCompaniesBranches: ko.pureComputed(function () {
+                    var search = viewModel.searchTerm().toLowerCase();
+                    if (!search) {
+                        return viewModel.companiesBranches();
+                    } else {
+                        return ko.utils.arrayFilter(viewModel.companiesBranches(), function (item) {
+                            return item.RequestedBranchName.toLowerCase().indexOf(search) !== -1;
+                        });
+                    }
+                })
+            };
 
             $('#sortAsc').on('click', function () {
-                var sortedData = originalData.sort((a, b) => a.RequestedBranchName.localeCompare(b.RequestedBranchName));
-                updateTable(sortedData);
+                viewModel.companiesBranches.sort(function (a, b) {
+                    return a.RequestedBranchName.localeCompare(b.RequestedBranchName);
+                });
             });
 
             $('#sortDesc').on('click', function () {
-                var sortedData = originalData.sort((a, b) => b.RequestedBranchName.localeCompare(a.RequestedBranchName));
-                updateTable(sortedData);
+                viewModel.companiesBranches.sort(function (a, b) {
+                    return b.RequestedBranchName.localeCompare(a.RequestedBranchName);
+                });
             });
 
-            function updateTable(data) {
-                var tbody = $('#dataTable tbody');
-                tbody.empty();
-                data.forEach(function (item) {
-                    tbody.append('<tr><td>' + item.RequestedBranchName + '</td><td>' + item.BranchName + '</td><td>' + item.CompanyName + '</td><td>' + item.Kind + '</td></tr>');
-                });
-            }
+            ko.applyBindings(viewModel);
         });
     </script>
 }
